2004-09-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_AddObjErrorInfo): More re-organization
	* generic/tclCmdAH.c (Tcl_ErrorObjCmd):     of the management of
	* generic/tclCmdMZ.c (TclProcessReturn):    the errorCode value.
	* tests/error.test (error-6.4-9):

        * generic/tclNamespace.c (TclTeardownNamespace): Tcl_Obj-ified
        * tests/namespace.test (namespace-8.5,6):       the save/restore
        of ::errorInfo and ::errorCode during global namespace teardown.
        Revised the comment to clarify why this is done, and added tests
        that will fail if this is not done.

        * generic/tclResult.c (TclTransferResult):      Added safety
        checks so that unexpected undefined ::errorInfo or ::errorCode
        will not lead to a segfault.

        * generic/tclTrace.c (TclCallVarTraces):     Save/restore the flag
        * tests/var.test (var-16.1):    values that define part of the
        interpreter state during variable traces.  [Bug 10381021].

2004-09-30  Miguel Sofer <msofer@users.sf.net>

	* tests/subst.test (12.1-2): added tests for [Bug 1036649]

2004-09-29  Don Porter  <dgp@users.sourceforge.net>

	* tests/basic.test (49.*):	New tests for TCL_EVAL_GLOBAL.

2004-09-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclVar.c (TclObjLookupVar, TclObjLookupVar): 
	(TclObjUnsetVar2, SetArraySearchObj): 
	* generic/tclUtil.c (SetEndOffsetFromAny): 
	* generic/tclStringObj.c (Tcl_SetStringObj): 
	(Tcl_SetUnicodeObj, SetStringFromAny): 
	* generic/tclResult.c (ResetObjResult): 
	* generic/tclRegexp.c (Tcl_GetRegExpFromObj): 
	* generic/tclPathObj.c (TclFSMakePathRelative, SetFsPathFromAny): 
	(TclFSMakePathFromNormalized, Tcl_FSNewNativePath): 
	* generic/tclObj.c (TclFreeObj, Tcl_SetBooleanObj, SetBooleanFromAny): 
	(Tcl_SetDoubleObj, SetDoubleFromAny, Tcl_SetIntObj): 
	(SetIntOrWideFromAny, Tcl_SetLongObj, SetWideIntFromAny): 
	(Tcl_SetWideIntObj, TclSetCmdNameObj, SetCmdNameFromAny): 