@@ -419,7 +419,6 @@ Tcl_CreateInterp()
 	mathFuncPtr->builtinFuncIndex = i;
 	i++;
     }
-    iPtr->flags |= EXPR_INITIALIZED;
 
     /*
      * Do Multiple/Safe Interps Tcl init stuff
@@ -3786,7 +3785,7 @@ Tcl_EvalObjEx(interp, objPtr, flags)
 
     Tcl_IncrRefCount(objPtr);
 
-    if ((iPtr->flags & USE_EVAL_DIRECT) || (flags & TCL_EVAL_DIRECT)) {
+    if (flags & TCL_EVAL_DIRECT) {
 	/*
 	 * We're not supposed to use the compiler or byte-code interpreter.
 	 * Let Tcl_EvalEx evaluate the command directly (and probably
@@ -3797,12 +3796,8 @@ Tcl_EvalObjEx(interp, objPtr, flags)
 	 * appreciable improvement in execution speed.  This is because it
 	 * allows us to avoid a setFromAny step that would just pack
 	 * everything into a string and back out again.
-	 *
-	 * USE_EVAL_DIRECT is a special flag used for testing purpose only
-	 * (ensure we go into the TCL_EVAL_DIRECT path, avoiding opt)
 	 */
-	if (!(iPtr->flags & USE_EVAL_DIRECT) &&
-		(objPtr->typePtr == &tclListType) && /* is a list... */
+	if ((objPtr->typePtr == &tclListType) && /* is a list... */
 		(objPtr->bytes == NULL) /* ...without a string rep */) {
 	    register List *listRepPtr =
 		(List *) objPtr->internalRep.twoPtrValue.ptr1;
